feat: created get all orders documentation
